# itmo-nn-compression

./: .gitignore  Makefile  README.md  coco.yaml  pyproject.toml  update_table.py  utils.py
baseline/: main.py
cluster/: hw_weights_clustering_for_MNIST.ipynb
different_frameworks/: yolo_models_test.py
distil/: YOLO_distillation.ipynb  distil.py
mlflow/: Dockerfile  Makefile  docker-compose.yaml
optimum/: YOLO_ONNX_Optimum.ipynb
prune/: pruning.py
quantization/: quantization.py
